# rust-gitlab

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.gitlab/: cargo.yml  rules.yml
.gitlab/ci/: cargo-nextest.sh  cargo-semver-checks.sh  version-from-changelog
data/: award_emoji.json  commit_note.json  commit_status.json  discussion.json  group.json  issue.json  issue_reference.json  job.json  member.json  merge_request.json  note.json  pipeline.json  pipeline_basic.json  project.json  project_hook.json  repo_branch.json  repo_commit_detail.json  resource_label_event.json  user.json  user_public.json
src/: api.rs  auth.rs  extensions.rs  gitlab.rs  lib.rs  macros.rs  systemhooks.rs  test.rs  types.rs  webhooks.rs
src/api/: README.md  client.rs  common.rs  endpoint.rs  endpoint_prelude.rs  error.rs  groups.rs  helpers.rs  ignore.rs  issues.rs  job.rs  packages.rs  paged.rs  params.rs  personal_access_tokens.rs  projects.rs  query.rs  raw.rs  retry.rs  runners.rs  sudo.rs  users.rs
src/api/deploy_keys/: deploy_keys.rs
src/api/groups/: access_requests.rs  create.rs  edit.rs  group.rs  groups.rs  push_rule.rs  runners.rs  share.rs  unshare.rs
src/api/groups/access_requests/: access_requests.rs  approve.rs  deny.rs  request.rs
src/api/groups/hooks/: create.rs  delete.rs  edit.rs  hook.rs  hooks.rs
src/api/groups/members/: add.rs  edit.rs  members.rs  remove.rs
src/api/groups/milestones/: create.rs
src/api/groups/projects/: projects.rs  shared.rs
src/api/groups/push_rule/: edit.rs
src/api/groups/runners/: runners.rs
src/api/groups/subgroups/: subgroups.rs
src/api/issues/: groups.rs  projects.rs
src/api/job/: job.rs
src/api/paged/: all_at_once.rs  lazy.rs  link_header.rs  pagination.rs
src/api/personal_access_tokens/: personal_access_token.rs  personal_access_token_self.rs  personal_access_tokens.rs  revoke.rs  revoke_self.rs  rotate.rs  rotate_self.rs
src/api/projects/: access_requests.rs  access_tokens.rs  archive.rs  create.rs  delete.rs  deployments.rs  edit.rs  issues.rs  members.rs  merge_requests.rs  merge_trains.rs  packages.rs  pipeline_schedules.rs  pipelines.rs  project.rs  projects.rs  push_rule.rs  releases.rs  runners.rs  share.rs  unarchive.rs  unshare.rs  variables.rs
src/api/projects/access_requests/: access_requests.rs  approve.rs  deny.rs  request.rs
src/api/projects/access_tokens/: access_token.rs  access_tokens.rs  create.rs  revoke.rs  rotate.rs
src/api/projects/deployments/: create.rs  delete.rs  deployment.rs  deployments.rs  edit.rs
src/api/projects/environments/: environments.rs
src/api/projects/hooks/: delete.rs
src/api/projects/issues/: awards.rs  create.rs  edit.rs  notes.rs  related_merge_requests.rs
src/api/projects/issues/awards/: award.rs  awards.rs  create.rs  delete.rs
src/api/projects/issues/notes/: awards.rs  create.rs  edit.rs  notes.rs
src/api/projects/jobs/: jobs.rs  play.rs
src/api/projects/labels/: label.rs  labels.rs
src/api/projects/members/: add.rs  all_member.rs  all_members.rs  edit.rs  member.rs  members.rs  remove.rs
src/api/projects/merge_requests/: approval_state.rs  approvals.rs  awards.rs  changes.rs  create.rs  diffs.rs  edit.rs  merge_request.rs  merge_requests.rs  pipelines.rs  unapprove.rs
src/api/projects/merge_requests/awards/: award.rs  create.rs  delete.rs
src/api/projects/merge_requests/discussions/: create.rs
src/api/projects/merge_requests/notes/: awards.rs  create.rs  edit.rs  (+1 more)
src/api/projects/milestones/: create.rs
src/api/projects/pipeline_schedules/: create.rs  delete.rs  edit.rs  pipelines.rs  play.rs  schedule.rs  schedules.rs  take_ownership.rs  variables.rs
src/api/projects/pipelines/: create.rs  jobs.rs  pipelines.rs  test_report.rs  test_report_summary.rs
src/api/projects/protected_branches/: protect.rs  protected_branches.rs
src/api/projects/protected_tags/: protect.rs  protected_tags.rs
src/api/projects/push_rule/: edit.rs
src/api/projects/registry/: delete_repository.rs  delete_repository_tag.rs  repositories.rs  repository_tag_details.rs  repository_tags.rs
src/api/projects/releases/: create.rs  links.rs  releases.rs
src/api/projects/repository/: archive.rs  commits.rs  files.rs  tree.rs
src/api/projects/runners/: disable.rs  enable.rs  runners.rs
src/api/projects/variables/: create.rs  update.rs  variable.rs
src/api/runners/: all_runners.rs  create.rs  delete.rs  delete_by_token.rs  edit.rs  jobs.rs  reset_authentication_token.rs  reset_authentication_token_by_token.rs  runner.rs  runners.rs  verify.rs
src/api/users/: create.rs  personal_access_tokens.rs  projects.rs  user.rs  users.rs
src/api/users/impersonation_tokens/: create.rs  delete.rs  impersonation_token.rs  impersonation_tokens.rs
src/api/users/personal_access_tokens/: create.rs  create_for_user.rs
src/test/: client.rs  types.rs
(+32 files in other folders)
