[package]
name = "gitlab"
version = "0.1610.0"
authors = ["Ben Boeckel <ben.boeckel@kitware.com>"]
license = "MIT/Apache-2.0"
description = """
Gitlab API client.
"""
repository = "https://gitlab.kitware.com/utils/rust-gitlab"
documentation = "https://docs.rs/gitlab/0.1610.0"
readme = "README.md"
keywords = ["gitlab", "api"]
categories = ["web-programming", "api-bindings"]
edition = "2021"

[features]
default = ["client_api"]
client_api = [
    "cron",
    "itertools",
    "percent-encoding",
    "reqwest",
    "thiserror",
    "graphql_client",
    "async-trait",
    "futures-util",
    "reqwest/rustls-tls",
]
client_der = ["reqwest/native-tls", "client_api"]
client_pem = ["reqwest/rustls-tls", "client_api"]
minimal_versions = ["void", "openssl", "tempfile", "h2", "memoffset", "mio", "rustls", "rustls-webpki"]
# This feature is here to aid with `semver-checks` by hiding the known-unstable
# parts of the crate.
_nohooks = []

[dependencies]
base64 = "~0.22"
cron = { version = "~0.12", optional = true }
derive_builder = "~0.20"
itertools = { version = "~0.12", optional = true }
log = "~0.4.6"
percent-encoding = { version = "^2.0", optional = true }
reqwest = { version = "~0.11.19", features = ["blocking", "json"], default-features = false, optional = true }
thiserror = { version = "^1.0.2", optional = true }
async-trait = { version = "~0.1.9", optional = true }
futures-util = { version = "0.3.14", default-features = false, optional = true }

bytes = "^1.0"
chrono = { version = "~0.4.23", default-features = false, features = ["clock", "serde"] }
graphql_client = { version = "~0.11", optional = true }
http = "~0.2.5"
serde = { version = "~1.0.103", features = ["derive"] }
serde_json = "^1.0.70"
serde_urlencoded = "~0.7"
url = "^2.1"

# Minimum version fixes.
#
# `unreachable` requires only `void 1.0.0`
# https://github.com/reem/rust-unreachable/pull/15
void = { version = "^1.0.1", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0044
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0072
openssl = { version = "~0.10.60", optional = true }
# Required to avoid `remove_dir_all` dependency.
tempfile = { version = "^3.4.0", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2024-0332
h2 = { version = "0.3.26", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0045
memoffset = { version = "0.6.2", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2024-0019
mio = { version = "0.8.11", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0052
rustls-webpki = { version = "0.101.4", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2024-0336
rustls = { version = "0.21.11", optional = true }

[dev-dependencies]
itertools = { version = "~0.12" }
tokio = { version = "1.18.5", features = ["macros", "rt-multi-thread"] }
